--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -136,4 +136,10 @@
   <data name="backButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\backButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Bg1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bg1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Bg2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Bg2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
